--- a/style.css
+++ b/style.css
@@ -4,20 +4,24 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container {
     background-color: rgba(255, 255, 255, 0.836);
-    margin-top: 8%;
-    margin-bottom: 8%;
+    margin-top: 6%;
     display: inline-block;
     min-height: 50vh;
 }
+
+h3,
 h1 {
     text-align: center;
     margin: 10px;
     padding-bottom: 2%;
     padding-top: 2%;
+    font-family: 'Martel', serif;
+    text-emphasis: bold;
 }
 
 .passwordStyle {
@@ -37,8 +41,8 @@ h1 {
     align-items: center;
     flex-wrap: wrap;
     text-align: center;
+    margin-bottom: 8%;
 }
-
 
 #slider{
     width: 100%;
@@ -62,17 +66,21 @@ h1 {
 
 #generateButton {
     background-color: red;
-    border: 2px solid white;
+    border: 2px solid red;
     color: white;
-    padding: 15px 32px;
+    padding: 15px 50px;
     text-align: center;
     font-size: 16px;
   }
 
-  #copyButton{
+#copyButton{
   background-color: white;
   border: 2px solid red;
   color: red;
   text-align: center;
+  padding: 15px;
   font-size: 16px;
 }
+
+
+  
