--- a/style.css
+++ b/style.css
@@ -81,3 +81,41 @@ h1 {
     padding: 15px;
     font-size: 16px;
 }
+
+
+
+@media only screen and (max-width: 600px) {
+    .buttons {
+        display: inline-block;
+        margin: 10px;
+    }
+    
+    #generateButton {
+        background-color: red;
+        border: 2px solid red;
+        color: white;
+        padding: 15px 50px;
+        text-align: center;
+        font-size: 16px;
+        margin-bottom: 10px;
+    }
+    
+    #copyButton {
+        background-color: white;
+        border: 2px solid red;
+        color: red;
+        text-align: center;
+        padding: 15px;
+        font-size: 16px;
+    }
+
+    #specialChar {
+        display: flex;
+        width: 100%;;
+    }
+
+    #length {
+        display: inline;
+        align-items: center;
+    }
+}
